# cs-skill

./: README.md
algorithm/course_wz/: CMakeLists.txt
algorithm/course_wz/c-cpp/09_queue/: array_queue.h  array_queue_test.cpp
algorithm/course_wz/java/skiplist_17/: SkipList2.java  SkipList3.java
computer-system/CMU15-213/labs/LAB4_cachelab/: trans.c
computer-system/CMU15-213/labs/LAB6_malloclab/: mdriver.c  tags
computer-system/CMU15-213/lectures/lesson10/: 19-malloc-basic.pptx  20-malloc-advanced.pptx  recitation09-tshlab-vm.pptx
computer-system/CMU15-213/lectures/lesson11/: 21-netprog1.pptx  22-netprog2.pptx  recitation10-malloc1.pptx
computer-system/CMU15-213/lectures/lesson12/: 23-concprog.pptx  24-sync-basic.pptx  recitation11-malloc2.pptx
computer-system/CMU15-213/lectures/lesson13/: 25-sync-advanced.pptx  recitation12-proxylab1.pptx
computer-system/CMU15-213/lectures/lesson14/: 26-parallelism.pptx  recitation14-proxylab2.pptx
computer-system/CMU15-213/lectures/lesson15/: 28-future2.pptx
computer-system/CMU15-213/lectures/lesson2/: 04-float.pptx
computer-system/CMU15-213/lectures/lesson3/: 05-machine-basics.pptx  06-machine-control-wrapup.pptx  06-machine-control.pptx
computer-system/CMU15-213/lectures/lesson4/: 08-machine-data.pptx
computer-system/CMU15-213/lectures/lesson5/: 10-optimization.pptx  cbootcamp-new.pptx  recitation05-attacklab.pptx
computer-system/CMU15-213/lectures/lesson6/: 11-memory-hierarchy.pptx
computer-system/CMU15-213/lectures/lesson7/: 13-linking.pptx  14-ecf-procs.pptx  recitation07-cachelab.pptx
(+6 files in other folders)
